Swagger RESTful API v 1.0
