# routes/api_v1.php
@@ -21,5 +21,5 @@ Route::post('/auth/login', [AuthController::class, 'loginUser']);
 
 Route::apiResources([
     'docs' => DocumentController::class,
-    'doctemplates' => DocTemplateController::class,
+    'doc_templates' => DocTemplateController::class,
 ]); 
